# gpt

./: AUTHORS  ChangeLog  HACKING  INSTALL  INSTALL.default  Makefile.am  Makefile.in  NEWS  README.en  README.md  README.pt_BR  THANKS  aclocal.m4  configure  configure.ac
doc/: Makefile.am  Makefile.in
doc/man/: Makefile.am  Makefile.in  gpt.1
doc/man/pt_BR/: Makefile.am  Makefile.in  gpt.1
exemplos/: Makefile.am  Makefile.in  olamundo.gpt
lib/: Makefile.am  Makefile.in  base.gpt
src/: GPT.cpp  GPT.hpp  Makefile.am  Makefile.in  main.cpp
src/modules/: GPTDisplay.cpp  GPTDisplay.hpp  Makefile.am  Makefile.in  PortugolAST.cpp  PortugolAST.hpp  Symbol.cpp  Symbol.hpp  SymbolTable.cpp  SymbolTable.hpp
src/modules/c_translator/: Makefile.am  Makefile.in  pt2c.g
src/modules/interpreter/: InterpreterDBG.cpp  InterpreterDBG.hpp  InterpreterEval.cpp  InterpreterEval.hpp  Makefile.am  Makefile.in  interpreter.g
src/modules/parser/: BasePortugolParser.cpp  BasePortugolParser.hpp  Makefile.am  Makefile.in  SemanticEval.cpp  SemanticEval.hpp  UnicodeCharBuffer.hpp  UnicodeCharScanner.hpp  accent.sh  lexer.g  parser.g  semantic.g
src/modules/x86/: Makefile.am  Makefile.in  X86.cpp  X86.hpp  asm_elf.h  asm_lib.h  asm_prologue.h  asm_win32.h  x86.g
